
- #11245: Merge the common code of ocamlcp and ocamloptp into a single module.
  (David Allsopp, review by Sébastien Hinderer)

- #11382: OCamlmktop use a new initialization module "OCamlmktop_init" to
  preserve backward-compatibility with user-module provided modules that install
  toplevel printers.
  (Florian Angeletti, review by Gabriel Scherer and David Allsopp)

### Manual and documentation:

- #11058: runtime/HACKING.adoc tips on debugging the runtime
  (Gabriel Scherer, review by Enguerrand Decorne and Nicolás Ojeda Bär)

- #11093: Add an effect handlers tutorial
  (KC Sivaramakrishnan, review by François Pottier, Gabriel Scherer, François
  Bobot and Wiktor Kuchta)

- #11192: Better documentation for condition variables.
  (François Pottier, review by Luc Maranget, Xavier Leroy, and Wiktor Kuchta)

- #11093: Add tutorials on parallelism features and the relaxed memory model
  (KC Sivaramakrishnan, review by Damien Doligez, Anil Madhavapeddy, Gabriel
  Scherer, Thomas Leonard, Tom Ridge, Xavier Leroy, Luc Maranget, Fabrice
  Buoro, Olivier Nicole, Guillaume Munch-Maccagnoni, Jacques-Henri Jourdan)

- #11640, #11647: Add missing options to the man pages:
   flambda commonly-used options, and negative options (`-no-rectypes`, ... ).
   (Amandine Nangah, review by David Allsopp, Florian Angeletti,
   Sébastien Hinderer, and Vincent Laviron)

- #11813: Make new multicore chapters easier to discover, and emphasize impact
  on C bindings.
  (Edwin Török, review by KC Sivaramakrishnan, and Florian Angeletti)

### Compiler user-interface and warnings:

- #9140, #11131: New command-line flag -nocwd to not include implicit
  the current directory to the load path.
  (Thomas Roglin, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #11089: Add 'since <version>' information to compiler warnings.
  (André Maroneze, review by Florian Angeletti and Gabriel Scherer)

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda